# install-arch

./: .env.example  .gitignore  .pre-commit-config.yaml  .releaserc.json  CHANGELOG.md  CONFIG.md  GETTING_STARTED.md  LICENSE  Makefile  README.md  REUSE-DEBT.md  REUSE.toml  config.toml  dev-config.toml  new-context-task.md  prepare-usb.sh  pyproject.toml  test-vm.sh  validate-config.sh
.devcontainer/: .env.example  Dockerfile  README.md  devcontainer.json  load-env.sh  post-create.sh
.github/: CODEOWNERS  copilot-instructions.md  glossary.md  index.md
.github/agents/: documentation.agent.md  evaluator.agent  evaluator.agent.md  linux-sysadmin.agent  linux-sysadmin.agent.md  orchestrator.agent.md  pr-review.agent.md  project-manager.agent  project-manager.agent.md  security.agent.md  swe.agent.md  testing.agent.md  virtualization.agent.md
.github/guardrails/: package-baseline.toml
.github/instructions/: arch-scripts.instructions.md  common-dev.instructions  common-dev.instructions.md  configs.instructions.md  pr-management.instructions.md  pr-review.instructions.md
.github/prompts/: common-dev.prompts  common-dev.prompts.md  create-usb-installer.prompt.md  review-pr.prompt.md  validate-installation.prompt.md
.github/workflows/: ci.yml  devcontainer.yml
configs/: README.md  archinstall-config.json  auto-install.sh  config.yaml  configure-installer.sh  debian_preseed.txt  first-login-setup.sh  force-password-change.sh  gitops-domains.yaml  hardware-emulation.yaml  network-config.yaml  post-install.sh  secret_allowlist.txt  system-update  system-update.sh  user-data.yaml
debian-installer/: README.md  debian-config.toml  local-debian-config.toml
debian-installer/configs/: debian-preseed.cfg
debian-installer/scripts/: debian-config.sh  post-install.sh  prepare-debian-usb.sh
docs/: development-setup.md  kde-installation-validation.md  security-hardening.md  testing-procedures.md  virtualization-tasks.md
iso/: README.md  archlinux-2025.12.01-x86_64.iso.sig  b2sums.txt  sha256sums.txt
scripts/: config.sh  configure-branch-protection.sh  devcontainer.sh  run-devcontainer-automation.sh  run-full-validation.sh  run-local-ci.sh  update-passwords.sh  validate-applications.sh  validate-hardware.sh  validate-kde-desktop.sh  validate-package-installation.sh  validate-security.sh  validate-services.sh
src/install_arch/: __init__.py  cli.py  config.py  filesystem.py  guardrails.py  package-baseline.toml  package_manager.py
tests/: test_cli.py  test_config.py  test_filesystem.py  test_guardrails.py  test_package_manager.py
ventoy-1.0.99/: log.txt
ventoy-1.0.99/tool/x86_64/: log.txt
vm-images/: development-plan.md  store-manifest.sh
vm-images/packer/arch/: README.md  arch-kde.pkr.hcl  setup-arch.sh
vm-images/packer/arch/http/: install.sh
vm-images/scripts/: test-arch-vm.sh
