[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "install-arch"
version = "1.1.1"
description = "Automated Arch Linux installation with security-first configurations"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pyyaml>=6.0",
    "jinja2>=3.1.0",
    "click>=8.1.0",
    "rich>=13.0.0",
    "questionary>=2.0.0",
    "cryptography>=41.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
    "pre-commit>=3.0.0",
]
docs = [
    "sphinx>=5.0.0",
    "sphinx-rtd-theme>=1.2.0",
]

[project.scripts]
install-arch-dev = "install_arch.cli:cli"
local-ci = "install_arch.cli:local_ci"
devcontainer-build = "install_arch.cli:devcontainer_build"
devcontainer-rebuild = "install_arch.cli:devcontainer_rebuild"
devcontainer-clean = "install_arch.cli:devcontainer_clean"
devcontainer-status = "install_arch.cli:devcontainer_status"

[dependency-groups]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
    "pre-commit>=3.0.0",
]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E203"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.semantic_release]
version_toml = ["pyproject.toml:project.version"]
version_source = "tag"
branch = "main"
changelog_file = "CHANGELOG.md"
build_command = "echo 'No build step required'"
upload_to_pypi = false
upload_to_release = true
github_token = "GITHUB_TOKEN"
commit_author = "github-actions[bot] <41898282+github-actions[bot]@users.noreply.github.com>"
commit_message = "chore(release): {version} [skip ci]"